# StrongerYou

./: docker-compose.yml  package-lock.json  package.json
Database/: init.sql
backend/: .env  Cargo.toml  Dockerfile  init.sql  truncate_database.py
backend/src/: .env  db.rs  exercises.rs  main.rs  markers.rs  routine.rs  routines.rs  workouts.rs
docker/backend/: Dockerfile
docker/database/: Dockerfile
docker/frontend/: Dockerfile
frontend/: Dockerfile  app.json  package-lock.json  package.json  pubspec.yaml
frontend/.dart_tool/: package_config.json
frontend/StrongerYou/: capacitor.config.ts  eslintrc.cjs  index.html  ionic.config.json  package-lock.json  package.json
frontend/StrongerYou/android/app/src/main/res/values/: strings.xml
frontend/StrongerYou/src/: App.tsx
frontend/StrongerYou/src/components/: RoutinesPage.css  RoutinesPage.tsx
frontend/StrongerYou/src/pages/: Routines.css  Routines.tsx
frontend/StrongerYou/src/services/: api.ts  types.ts
frontend/StrongerYou/src/tests/: api.test.ts
frontend/StrongerYou/src/theme/: variables.css
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/sunnysa5/myapp/: MainActivity.kt  MainApplication.kt
frontend/app/: index.tsx
frontend/ios/myapp/: Info.plist
frontend/ios/myapp.xcodeproj/: project.pbxproj
