[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4"